CAY-2475 Modeler: move inheritance icon to name column in objAttr table and objRel table
CAY-2478 cgen: Generate properties for PK
CAY-2481 Support for Object[] as return type in SQLTemplate and SQLExec
CAY-2485 Compact Slf4j Logger
CAY-2487 Removed usage of CayenneException.
CAY-2489 Add validation to the case of not to PK relationships
CAY-2491 Remaster Db Import View

Bug Fixes:

CAY-2320 Modeler: Limit input into numeric fields to 10 digits
CAY-2444 Change URI from http:// to https:// in xsi:schemaLocation
CAY-2445 Oracle: Problem with ExpressionFactory.notInExp()
CAY-2449 Modeler: Needless scrollbar in Generate DB Schema result menu
CAY-2450 Modeler: Impossible to update Attribute title after syncing ObjEntity
CAY-2451 Modeler: ObjEntity "Edit" button doesn't open editor for Relationship
CAY-2454 Modeler: Unable to read validation message if it's truncated
CAY-2455 Modeler: The width of the pop-up window is very large
CAY-2459 Modeler: DataMap paste function is not working
CAY-2462 Modeler: Clipboard holds old content after application was reloaded
CAY-2463 Modeler: DB Schema generation doesn't work
CAY-2464 ClassCastException when returning PRUNED_NODE in expression transformer
CAY-2470 Can't bind SQLExec parameters in a loop
CAY-2472 Clear cached replacement query on mutation in all indirect queries
CAY-2476 Modeller: Fixed wrong behaviour of code generation dialog
CAY-2480 cayenne:cdbgen and cayenne:cgen have identical text in cayenne-maven-plugin
CAY-2484 maven plugins missing in 4.1.M2 release
CAY-2490 Added dbEntities from other datamaps in dbRelationship dialog.

----------------------------------
Release: 4.1.M2
Date: July 11, 2018
----------------------------------
Changes/New Features:

CAY-1683 Injectable PkGenerator
CAY-2304 Custom ClassLoader for Maven and Gradle plugins that use project dependencies
CAY-2334 cgen: option to force run from maven/gradle
CAY-2337 Save reverse engineering configuration with datamap XML