@@ -233,13 +233,19 @@ name|ConfigHandler
 extends|extends
 name|NamespaceAwareNestedTagHandler
 block|{
-specifier|public
+specifier|static
+specifier|final
+name|String
+name|OLD_CONFIG_TAG
+init|=
+literal|"config"
+decl_stmt|;
 specifier|static
 specifier|final
 name|String
 name|CONFIG_TAG
 init|=
-literal|"config"
+literal|"dbImport"
 decl_stmt|;
 specifier|private
 specifier|static
@@ -463,6 +469,15 @@ condition|)
 block|{
 case|case
 name|CONFIG_TAG
+case|:
+name|createConfig
+argument_list|()
+expr_stmt|;
+return|return
+literal|true
+return|;
+case|case
+name|OLD_CONFIG_TAG
 case|:
 name|createConfig
 argument_list|()
